# fernbedienung

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Containerfile  Dockerfile  LICENSE  README.md  build.zig  run-remote.sh
.cargo/: config.toml
.github/workflows/: build.yml
src/: main.rs  main.zig
