[package]
name = "fernbedienung"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
evdev = "0.11.4"
eyre = "0.6.6"
inotify = "0.10.0"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
shell-words = "1.0.0"
toml = "0.5.8"
